# qatestsuit

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  basecamp-test-suite.json  centrifugo-client-test-suite.json  centrifugo-test-suite.json  discourse-test-suite.json  filebrowser-test-suite.json  focalboard-test-suite.json  graphhopper-test-suite.json  notion-test-suite.json  package.json  postman-collection.json  prestashop-test-suite.json  pyproject.toml  requirements.txt  saucedemo-test-suite.json  start.py  start.sh  trello-test-suite.json  uptime-kuma-test-suite.json
.claude/: settings.local.json
.kamal/: secrets
app/: __init__.py  benchmark.py  docker_manager.py  main.py  models.py  registry.py
config/: deploy.yml  graphhopper.Dockerfile  saas-images.json
examples/: test-runner-example.js  test_workflow.py
src/: docker-manager.js  server.js
static/: centrifugo-client.html  index.html
