[project]
name = "qa-docker-test-manager"
version = "1.0.0"
description = "Docker container management API for QA testing with human-readable image IDs"
authors = [{name = "QA Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "docker==7.1.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "shortuuid==1.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
start = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
